grammar.js
    chunk: ($) => seq(optional($.hash_bang_line), optional($._block)),

    // block = {stat [';']} [laststat [';']]
    _block: ($) =>
      choice(
        seq($.last_statement, optional(";")),
        seq(
          repeat1(seq($.statement, optional(";"))),
          optional(seq($.last_statement, optional(";"))),
        ),
      ),

    // laststat = 'return' [explist] | 'break' | 'continue'
    _type_identifier: ($) => alias($.identifier, $.type_identifier),

    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    _reserved_identifier: ($) =>
      choice(
        "continue",
        "export",
        "type",
        "typeof",
        "declare",
        "class",
        "extends",
      ),

    // binding = NAME [':' Type]
    binding: ($) =>
      seq(
        field("name", choice($.identifier)),
        optional(seq(":", field("type", $.type))),
      ),

    // bindinglist = binding [',' bindinglist]
    binding_list: ($) => commaSep1($.binding),

    /*
      stat = varlist '=' explist |
          var compoundop exp |
          functioncall |
          'do' block 'end' |
          'while' exp 'do' block 'end' |
          'repeat' block 'until' exp |
          'if' exp 'then' block {'elseif' exp 'then' block} ['else' block] 'end' |
          'for' binding '=' exp ',' exp [',' exp] 'do' block 'end' |
          'for' bindinglist 'in' explist 'do' block 'end' |
          attributes 'function' funcname funcbody |
          attributes 'local' 'function' NAME funcbody |
          'local' bindinglist ['=' explist] |
          attributes 'const' 'function' NAME funcbody | [TODO(teapo): Luau grammar does not include attributes here but I'm unsure that's really intended]
          'const' bindinglist '=' explist |
          ['export'] 'type' NAME ['<' GenericTypeListWithDefaults '>'] '=' Type |
          ['export'] 'type' 'function' NAME funcbody
    */
    _method_explicit_type_parameter_instantiation: ($) =>
      seq(
        field("method", $.method_index_expression),
        "<<",
        $.type_parameters,
        ">>",
      ),

    // prefixexp . NAME
    dot_index_expression: ($) =>
      seq(
        field("table", $._prefix_expression),
        ".",
        field("field", $._field_identifier),
      ),

    // prefixexp ':' NAME
    _method_index_expression: ($) =>
      seq(
        field("table", $._prefix_expression),
        ":",
        field("method", $._field_identifier),
      ),

    method_index_expression: ($) =>
      choice(
        $._method_index_expression,
        alias(
          $._method_explicit_type_parameter_instantiation,
          $.explicit_type_parameter_instantiation,
        ),
      ),

    // field = '[' exp ']' '=' exp | NAME '=' exp | exp
    local_variable_declaration: ($) =>
      seq(
        "local",
        $.binding_list,
        optional(seq("=", alias($._expression_list, $.expression_list))),
      ),

    // 'cons' bindinglist ['=' explist]
    type_pack: ($) => seq("(", optional($._type_list), ")"),

    // TypeList = Type [',' TypeList] | '...' Type
    _type_list: ($) =>
      choice(
        //seq(commaSep1($.type), optional(seq(",", "...", $.type))),
        seq(
          commaSep1($.type),
          optional(seq(",", choice($.variadic_type_pack, $.generic_type_pack))),
        ),
        choice($.variadic_type_pack, $.generic_type_pack),
      ),

    // TypeParams = (Type | TypePack | VariadicTypePack | GenericTypePack) [',' TypeParams]
    type_parameters: ($) =>
      commaSep1(
        choice(
          $.type,
          prec.dynamic(1, $.type_pack),
          $.variadic_type_pack,
          $.generic_type_pack,
        ),
      ),

    // fieldsep = ',' | ';'
    type_reference: ($) =>
      prec.right(
        PREC.TYPE_REFERENCE,
        seq(
          choice(
            field(
              "name",
              choice(
                $._type_identifier,
                alias($._reserved_identifier, $.type_identifier),
              ),
            ),
            seq(
              field(
                "prefix",
                choice(
                  $.identifier,
                  alias($._reserved_identifier, $.identifier),
                ),
              ),
              ".",
              field(
                "name",
                alias(
                  choice(
                    $._type_identifier,
                    alias($._reserved_identifier, $.type_identifier),
                  ),
                  $.type_identifier,
                ),
              ),
            ),
          ),
          optional(
            seq("<", field("parameters", optional($.type_parameters)), ">"),
          ),
        ),
      ),

    // 'typeof' '(' exp ')'
    identifier: (_) => {
      // Luau identifiers can contain unicode characters. We allow any
      // segment that doesn't include any character which cannot exist
      // in an identifier.
      const identifier_start =
        /[^\p{Control}\s\n\r+\-*/%^#&~|<>=(){}@\[\];:,.\\'"`?\d]/;
      const identifier_continue =
        /[^\p{Control}\s\n\r+\-*/%^#&~|<>=(){}@\[\];:,.\\'"`?]*/;
      return token(seq(identifier_start, identifier_continue));
    },
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @return {SeqRule}
 *
 */
function commaSep1(rule) {
  return sep1(rule, ",");
}

/**
 * Creates a rule to match zero or more of the rules separated by a comma
 * @param {Rule} rule
 * @return {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RegExp|Rule|String} rule
 *
 * @param {RegExp|Rule|String} sep
 *
 * @return {SeqRule}
 *
 */
function sep1(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}
