test/corpus/functions.txt
=====
Explicit types in call
=====

foo<<P, Q, R>>(p, q)

---

    (chunk
      (function_call
        (explicit_type_parameter_instantiation
          (identifier)
          (type_parameters
            (type_reference
              (type_identifier))
            (type_reference
              (type_identifier))
            (type_reference
              (type_identifier))))
        (arguments
          (identifier)
          (identifier))))

=====
Explicit types including type pack in call
=====

foo<<P, Q, R, (U, V, W), X, (Y, Z)>>(p, q)

---

    (chunk
      (function_call
        (explicit_type_parameter_instantiation
          (identifier)
          (type_parameters
            (type_reference
              (type_identifier))
            (type_reference
              (type_identifier))
            (type_reference
              (type_identifier))
            (type_pack
              (type_reference
                (type_identifier))
              (type_reference
                (type_identifier))
              (type_reference
                (type_identifier)))
            (type_reference
              (type_identifier))
            (type_pack
              (type_reference
                (type_identifier))
              (type_reference
                (type_identifier)))))
        (arguments
          (identifier)
          (identifier))))

=====
Explicit types in variable
=====

local foo = bar<<P, Q, R>>
bar(p, q)

---

    (chunk
      (local_variable_declaration
        (binding_list
          (binding
            (identifier)))
        (expression_list
          (explicit_type_parameter_instantiation
            (identifier)
            (type_parameters
              (type_reference
                (type_identifier))
              (type_reference
                (type_identifier))
              (type_reference
                (type_identifier))))))
      (function_call
        (identifier)
        (arguments
          (identifier)
          (identifier))))

=====
Explicit types dot index call
=====

local foo = tbl.bar<<string>>()

---

    (chunk
      (local_variable_declaration
        (binding_list
          (binding
            (identifier)))
        (expression_list
          (function_call
            (explicit_type_parameter_instantiation
              (dot_index_expression
                (identifier)
                (field_identifier))
              (type_parameters
                (type_reference
                  (type_identifier))))
            (arguments)))))

=====
Explicit types dot method call
=====

local foo = tbl:bar<<string>>()

---

    (chunk
      (local_variable_declaration
        (binding_list
          (binding
            (identifier)))
        (expression_list
          (function_call
            (method_index_expression
              (explicit_type_parameter_instantiation
                (method_index_expression
                  (identifier)
                  (field_identifier))
                (type_parameters
                  (type_reference
                    (type_identifier)))))
            (arguments)))))
